@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2024-XX-XX  Release X.XX.X                                     ---
 ----------------------------------------------------------------------
 
+* fixed MGED solid editing "ted" command - Cliff Yapp
 * added support for console text editing on Windows - Cliff Yapp
 * fixed make_pnts GED command - Cliff Yapp
 * fixed Archer Center View button - Cliff Yapp
